--- a/server/package.json
+++ b/server/package.json
@@ -3,5 +3,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "web-push": "^3.5.0"
+  },
+  "scripts": {
+    "dev": "nodemon index.js"
   }
 }
